--- a/express/myblog/package.json
+++ b/express/myblog/package.json
@@ -2,9 +2,11 @@
   "name": "myblog",
   "version": "1.0.0",
   "description": "",
-  "main": "app.js",
+  "main": "server.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "dev": "cross-env NODE_ENV=dev nodemon server.js",
+    "start": "export NODE_ENV=production && node server.js"
   },
   "author": "",
   "license": "ISC",
@@ -23,5 +25,9 @@
     "objectid-to-timestamp": "^1.3.0",
     "sha1": "^1.1.1",
     "winston": "^3.3.3"
+  },
+  "devDependencies": {
+    "cross-env": "^7.0.3",
+    "nodemon": "^2.0.6"
   }
 }
