--- a/express/myblog/package.json
+++ b/express/myblog/package.json
@@ -4,7 +4,7 @@
   "description": "",
   "main": "server.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1",
+    "test": "istanbul cover _mocha",
     "dev": "cross-env NODE_ENV=dev nodemon server.js",
     "start": "export NODE_ENV=production && node server.js"
   },
@@ -28,6 +28,9 @@
   },
   "devDependencies": {
     "cross-env": "^7.0.3",
-    "nodemon": "^2.0.6"
+    "istanbul": "^0.4.5",
+    "mocha": "^8.3.0",
+    "nodemon": "^2.0.6",
+    "supertest": "^4.0.2"
   }
 }
